# compositions

./: LICENSE.md  Makefile  README.md  pyproject.toml
docs/: LICENSE.md  mkdocs.yaml
docs/source/: index.md
docs/source/servitude/: 00--prelude.md  01--servitude.md  index.md
scratch/servitude/: scraped.md
servitude/: 01--servitude--exerpt.md  01--servitude.md
